--- a/Introduction/什么是数据结构和算法？.md
+++ b/Introduction/什么是数据结构和算法？.md
@@ -1,5 +1,4 @@
-
-# 数据结构和算法是什么？
+# 什么是数据结构和算法
 
 > 程序 = 算法 + 数据结构
 
@@ -13,25 +12,26 @@
 一般地，当算法在处理信息时，会从输入设备或数据的存储地址读取数据，把结果写入输出设备或某个存储地址供以后再调用。
 
 ```
------------       
-输入 --> |   算法    | --> 输出
------------  
+               -----------       
+      输入 --> |   算法    | --> 输出
+               -----------  
 ```
 
 算法的核心是**创建问题抽象的模型和明确求解目标**，之后可以根据具体的问题选择不同的模式和方法完成算法的设计。
 
 #### 2. 示例
 求一个数组中的最大值：
+
 ``` C++
 int max(int *array, int size) {
-int max = *array;  // 默认第 0 个最大
-int i;
-for (i = 1; i < size; i++) {
-if (array[i] > max) {
-max = array[i];
-}
-}
-return max;
+  int max = *array;  // 默认第 0 个最大
+  int i;
+  for (i = 1; i < size; i++) {
+    if (array[i] > max) {
+      max = array[i];
+    }
+  }
+  return max;
 }
 
 ```
@@ -72,19 +72,19 @@ T(n) = O(f(n))
 详见 [Swift Algorithm Club: 大 O 表示法](https://github.com/ksco/swift-algorithm-club-cn/blob/master/Big-O%20Notation.markdown)
 
 - 说明：
-- 大部分情况下你用直觉就可以知道一个算法的大 O 表示法
-- 大 O 表示法只是一种估算，当数据量大的时候才有用
-- 这种东西仅仅在比较两种算法哪种更好的时候才有点用。但归根结底，你还是要实际测试之后才能得出结论。而且如果数据量相对较小，哪怕算法比较慢，在实际使用也不会造成太大的问题。
+  - 大部分情况下你用直觉就可以知道一个算法的大 O 表示法
+  - 大 O 表示法只是一种估算，当数据量大的时候才有用
+  - 这种东西仅仅在比较两种算法哪种更好的时候才有点用。但归根结底，你还是要实际测试之后才能得出结论。而且如果数据量相对较小，哪怕算法比较慢，在实际使用也不会造成太大的问题。
 
 #### 4. 常用算法
 - 排序
-- 插入排序
-- 选择排序
-- 快速排序
-- 冒泡排序
+  - 插入排序
+  - 选择排序
+  - 快速排序
+  - 冒泡排序
 - 查找
-- 线性查找
-- 二分法
+  - 线性查找
+  - 二分法
 
 ### 二、数据结构
 
