--- a/Introduction/什么是数据结构和算法？.md
+++ b/Introduction/什么是数据结构和算法？.md
@@ -106,7 +106,7 @@ T(n) = O(f(n))
 - 集合
 - 图
 
-### Reference 
+### 三、参考资料 
 - [算法-维基百科](https://zh.wikipedia.org/wiki/算法#.E5.A4.8D.E6.9D.82.E5.BA.A6)
 - [数据结构-维基百科](https://zh.wikipedia.org/wiki/数据结构)
 - [Swift Algorithm Club](https://github.com/raywenderlich/swift-algorithm-club)
