--- a/Introduction/为什么要学习数据结构和算法？.md
+++ b/Introduction/为什么要学习数据结构和算法？.md
@@ -1,12 +1,12 @@
 # 为什么要学习数据结构和算法？
 
 
-### 现实
+### 一、现实
 在平时的编码工作中，到底会有多少机会需要自己亲自编写一个链表或排序算法呢？
 
 答案是：可能永远都不会。
 
-### 然而...
+### 二、然而...
 
 学习数据结构有什么用？
 
@@ -16,7 +16,7 @@
 - 还有些时候，我们对自己所面对的问题根本就手足无措，甚至连一个效率较低的算法都写不出来，根本就不知道从何处下手。这时候，如果了解一些算法理论，就会有更多的方法去尝试
 - 为了面试获得更好的表现（这一点也是很现实的，~逃~）
 
-### 大家怎么说？
+### 三、大家怎么说？
 > 学习数据结构，就是为了了解以后在IT行业里搬砖需要用到什么工具，这些工具有什么利弊，应用于什么场景。以后用的过程中，你会发现这些基础的“工具”也存在着一些缺陷，你不满足于此工具，此时，你就开始自己在这些数据结构的基础上加以改造，这就叫做自定义数据结构。
 
 > web 编程也好，手机 app 也罢，都是应用层面，遵循固定的教程就能开发出来，如果不深入底层，都不需要怎么思考的，纯靠多做有经验了就能找到工作。
@@ -31,7 +31,7 @@
 
 > The way I see it, it is not algorithms that I need in everyday life, but the ability to quickly analyze the problem and find a solution. 
 
-### 参考资料
+### 四、参考资料
 
 - [Swift Algorithm Club: 为什么要学习算法与数据结构](https://github.com/ksco/swift-algorithm-club-cn/blob/master/Why%20Algorithms.markdown)
 - [If advanced algorithms and data structures are never used in industry, then why learn them? - Quora](https://www.quora.com/If-advanced-algorithms-and-data-structures-are-never-used-in-industry-then-why-learn-them/answer/Jerason-Banes)
