--- a/Introduction/如何设计自己的算法？.md
+++ b/Introduction/如何设计自己的算法？.md
@@ -16,7 +16,7 @@
 
 ### 三、学会运用算法思想
 #### 1. 经典的算法思想
-- [分而治之](https://zh.wikipedia.org/wiki/分治法)：把一个问题分区成互相独立的多个部分分别求解的思路。这种求解思路带来的好处有很多——减低复杂度、算法复用以及便于进行并行计算。
+- [分而治之](https://zh.wikipedia.org/wiki/分治法)：把一个问题分区成互相独立的多个部分分别求解的思路。这种求解思路带来的好处有很多——减低复杂度、算法复用以及便于进行并行计算。典型的应用场景有归并排序、快速排序等。
 - [动态规划](https://zh.wikipedia.org/wiki/动态规划)：当问题的整体最优解就是由局部最优解组成的时候，经常采用的一种方法。
 - [贪婪算法](https://zh.wikipedia.org/wiki/贪心法)：常见的近似求解思路。当问题的整体最优解不是（或无法证明是）由局部最优解组成，且对解的最优性没有要求的时候，可以采用的一种方法。
 - 简并法：把一个问题通过逻辑或数学推理，简化成与之等价或者近似的、相对简单的模型，进而求解的方法。
@@ -24,7 +24,8 @@
 - 迭代法
 - 穷举搜索法
 - 递推法
-- 回溯
+- 回溯算法
+- 随机化算法
 
 #### 2. 聊聊“分而治之”
 
@@ -44,4 +45,5 @@
 - [ksco/swift-algorithm-club-cn：为什么要学习算法？](https://github.com/ksco/swift-algorithm-club-cn/blob/master/Why%20Algorithms.markdown)
 - [算法-维基百科](https://zh.wikipedia.org/wiki/算法#.E5.A4.8D.E6.9D.82.E5.BA.A6)
 - [冉文杰的算法学习笔记：nonstriater/Learn-Algorithms](https://github.com/nonstriater/Learn-Algorithms)
+- 数据结构与算法分析——C 语言描述
 - 剑指 Offer
