更新算法学习笔记：大 O 表示法

--- a/Introduction/什么是数据结构和算法？.md
+++ b/Introduction/什么是数据结构和算法？.md
@@ -67,6 +67,8 @@ T(n) = O(f(n))
 - 大 O 表示法怎么看？怎么用？
 假设一个算法的时间复杂度是 O(n)，n 在这里代表的意思就是数据的个数。举个例子，如果你的代码用一个循环遍历 100 个元素，那么这个算法就是 O(n)，n 为 100，所以这里的算法在执行时就要做 100 次工作。
 
+- 大O符号是关于一个算法的最坏情况的。比如说，你要从一个大小为 100 的数组（数组中存的都是数字）中找出一个数值等于 10 的元素，我们可以从头到尾扫描一遍，这个复杂度就是 O(n)，这里 n 等于 100，实际上呢，有可能第 1 次就找到了，也有可能是第 100 次才找到，但是大 O 表示法考虑的是最坏的情况，也就是一个算法理论上要执行多久才能覆盖所有的情况。
+
 - 常见的时间复杂度有：
 常数阶O(1)，对数阶O(log2n)，线性阶O(n)，线性对数阶O(nlog2n)，平方阶O(n2)，立方阶O(n3)，...， k次方阶O(nk)，指数阶O(2n)。随着问题规模n的不断增大，上述时间复杂度不断增大，算法的执行效率越低。
 详见 [Swift Algorithm Club: 大 O 表示法](https://github.com/ksco/swift-algorithm-club-cn/blob/master/Big-O%20Notation.markdown)
@@ -75,6 +77,11 @@ T(n) = O(f(n))
   - 大部分情况下你用直觉就可以知道一个算法的大 O 表示法
   - 大 O 表示法只是一种估算，当数据量大的时候才有用
   - 这种东西仅仅在比较两种算法哪种更好的时候才有点用。但归根结底，你还是要实际测试之后才能得出结论。而且如果数据量相对较小，哪怕算法比较慢，在实际使用也不会造成太大的问题。
+  
+  推荐阅读：
+  - [Algorithms in plain English: time complexity and Big-O notation](https://medium.freecodecamp.org/time-is-complex-but-priceless-f0abd015063c)（[中文翻译](https://www.jianshu.com/p/59d09b9cee58)）
+  - [算法时间复杂度的表示法O(n²)、O(n)、O(1)、O(nlogn)等是什么意思？](https://www.zhihu.com/question/21387264/answer/148670878)
+  - [简明解释算法中的大O符号](http://blog.jobbole.com/55184/)
 
 #### 4. 常用算法
 - 排序
