--- a/Introduction/如何学好数据结构和算法？.md
+++ b/Introduction/如何学好数据结构和算法？.md
@@ -1,35 +1,74 @@
 # 如何学好数据结构和算法？
 
 
-- 确定学习目标
-- 制定学习路线
-- 明确学习要点
-  - 不要死记硬背算法实现，你应该试着去理解不同的数据结构、算法的原理是什么，是如何解决不同的问题的
-  - 分析时间和空间复杂度、优点、缺点以及适用于解决什么问题，什么情况下更适合采用哪种算法和数据结构
-  - 算法思想才是更重要的，比如：分而治之、动态规划、贪婪算法等，学习算法思想可以帮你更好地理解算法之间的快慢差异，并学会在算法对时间和空间的使用上做出平衡
-  - 尝试把数据结构图形化，视觉化
-  - 一定要自己动手实现一遍
-- 搜集学习资料
-  - 书籍
-    - 数据结构与算法分析：C 语言描述
-    - 算法导论
-    - 算法概论（Algorithms）
-    - 剑指 Offer
-  - 看算法相关源码 
-    - YYCache
-    - IGListKit
-    - React.js
-  - 可视化网站
-    - http://visualgo.net
-- 理解练习、编程实践
-  - 用 C/C++/Swift 把所有经典算法写一遍，先尝试自己把这些数据结构实现一遍，然后再模仿优秀的源码
-  - 刷题
-    - leetCode
-    - 在 google 上搜索“某个数据结构 + ACM”，然后做题目
-    - [剑指Offer_编程题_牛客网](https://www.nowcoder.com/ta/coding-interviews?page=1)
+#### 1. 确定学习目标
+
+- 知道有哪些常用的数据结构和算法
+- 能够写出高性能的底层轮子
+- 知道如何进行复杂度分析、性能分析
+- 通过不断训练，具备“算法思维”，提高分析和解决实际问题的能力
+- 能够自如地应付大厂面试
+
+#### 2. 制定学习路线
+
+（1）入门
+
+- 知道数据结构和算法是什么
+- 复杂度分析和大 O 表示法
+- 稳定性
+
+（2）基础
+
+- 结合具体的示例，学习各种常用的数据结构和算法
+- 知道各常用数据结构的优缺点
+- 知道分析各常用算法的复杂度
+
+（3）进阶、高级
+
+- 不太常用的、比较高级的数据结构和算法，比如红黑树等
+
+（4）实战
+开源项目中的数据结构
+高级：和
+高级：算法的是
+高级：使用
+高级：
+高级：
+
+#### 3. 明确学习要点
+
+- 不要死记硬背算法实现，你应该试着去理解不同的数据结构、算法的原理是什么，是如何解决不同的问题的
+- **分析时间和空间复杂度**，知道各个算法和数据结构的优点、缺点是什么，以及适用于解决什么问题，什么情况下更适合采用哪种算法和数据结构
+- 算法思想才是更重要的，比如：分而治之、动态规划、贪婪算法等，学习算法思想可以帮你更好地理解算法之间的快慢差异，并学会在算法对时间和空间的使用上做出平衡
+- 尝试把数据结构图形化，视觉化
+- 一定要自己动手实现一遍
+
+
+#### 4. 搜集学习资料
+- 书籍
+  - 数据结构与算法分析：C 语言描述
+  - 算法导论
+  - 算法概论（Algorithms）
+  - 剑指 Offer
+- 看算法相关源码 
+  - YYCache
+  - IGListKit
+  - React.js
+- 可视化网站
+  - http://visualgo.net
+  
+  
+#### 5. 理解练习、编程实践
+- 用 C/C++/Swift 把所有经典算法写一遍，先尝试自己把这些数据结构实现一遍，然后再模仿优秀的源码
+- 刷题
+  - leetCode
+  - 在 google 上搜索“某个数据结构 + ACM”，然后做题目
+  - [剑指Offer_编程题_牛客网](https://www.nowcoder.com/ta/coding-interviews?page=1)
   - 在实际工作中应用所学到的算法知识
-- 积极交流，获取反馈
-  - 加入算法学习社区，相互鼓励学习
+  
+  
+#### 6. 积极交流，获取反馈
+- 加入算法学习社区，相互鼓励学习
 
 
 ### 参考资料
