--- a/Introduction/如何学好数据结构和算法？.md
+++ b/Introduction/如何学好数据结构和算法？.md
@@ -28,20 +28,17 @@
 - 不太常用的、比较高级的数据结构和算法，比如红黑树等
 
 （4）实战
-开源项目中的数据结构
-高级：和
-高级：算法的是
-高级：使用
-高级：
-高级：
 
-#### 3. 明确学习要点
+- 研究各经典开源项目中数据结构和算法的使用
 
-- 不要死记硬背算法实现，你应该试着去理解不同的数据结构、算法的原理是什么，是如何解决不同的问题的
+#### 3. 明确学习要点（重点）
+
+- **不要死记硬背算法实现**，你应该试着去理解不同的数据结构、算法的原理是什么，它们是怎么来的，是如何解决不同的问题的
 - **分析时间和空间复杂度**，知道各个算法和数据结构的优点、缺点是什么，以及适用于解决什么问题，什么情况下更适合采用哪种算法和数据结构
-- 算法思想才是更重要的，比如：分而治之、动态规划、贪婪算法等，学习算法思想可以帮你更好地理解算法之间的快慢差异，并学会在算法对时间和空间的使用上做出平衡
+- **算法思想才是更重要的**，比如：分而治之、动态规划、贪婪算法等，学习算法思想可以帮你更好地理解算法之间的快慢差异，并学会在算法对时间和空间的使用上做出平衡
 - 尝试把数据结构图形化，视觉化
 - 一定要自己动手实现一遍
+- 学到的知识需要时间慢慢消化、沉淀，不要试图一下子就全部掌握，学习本身就是反复迭代和不断思考的过程。如果学习过程中遇到挫败感，想想“书读百遍其义自见”这句话，可以先跳过这部分理解不了的，后面回过头再学习。
 
 
 #### 4. 搜集学习资料
