--- a/Introduction/什么是数据结构和算法？.md
+++ b/Introduction/什么是数据结构和算法？.md
@@ -38,6 +38,8 @@ int max(int *array, int size) {
 
 #### 3. 复杂度
 
+> 注：这里只做简单介绍，更详细的内容见[复杂度分析](https://github.com/ShannonChenCHN/algorithm-and-data-structure/issues/2)。
+
 采用不同的算法，会有不同的效率。因此，知道某个算法的运行速度和占用的内存空间，对于选择正确的算法来解决问题非常有帮助。
 
 #### 3.1 时间复杂度
